--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ annotated-types==0.7.0
 anyio==4.9.0
 bcrypt==4.3.0
 click==8.2.2
+dotenv==0.9.9
 ecdsa==0.19.1
 fastapi==0.116.1
 greenlet==3.2.3
@@ -12,6 +13,7 @@ psycopg2-binary==2.9.10
 pyasn1==0.6.1
 pydantic==2.11.7
 pydantic_core==2.33.2
+python-dotenv==1.1.1
 python-jose==3.5.0
 redis==6.2.0
 rsa==4.9.1
