--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,13 @@ ecdsa==0.19.1
 fastapi==0.116.1
 greenlet==3.2.3
 h11==0.16.0
+h2==4.2.0
+hpack==4.1.0
+Hypercorn==0.17.3
+hyperframe==6.1.0
 idna==3.10
 passlib==1.7.4
+priority==2.0.0
 psycopg2-binary==2.9.10
 pyasn1==0.6.1
 pydantic==2.11.7
@@ -24,3 +29,4 @@ starlette==0.47.2
 typing-inspection==0.4.1
 typing_extensions==4.14.1
 uvicorn==0.35.0
+wsproto==1.2.0
