--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,10 @@ annotated-types==0.7.0
 anyio==4.9.0
 bcrypt==4.3.0
 click==8.2.2
+dnspython==2.7.0
 dotenv==0.9.9
 ecdsa==0.19.1
+email_validator==2.2.0
 fastapi==0.116.1
 greenlet==3.2.3
 h11==0.16.0
