--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 annotated-types==0.7.0
 anyio==4.9.0
 bcrypt==4.3.0
+cffi==1.17.1
 click==8.2.2
+cryptography==45.0.5
 dnspython==2.7.0
 dotenv==0.9.9
 ecdsa==0.19.1
@@ -14,10 +16,12 @@ hpack==4.1.0
 Hypercorn==0.17.3
 hyperframe==6.1.0
 idna==3.10
+jwt==1.4.0
 passlib==1.7.4
 priority==2.0.0
 psycopg2-binary==2.9.10
 pyasn1==0.6.1
+pycparser==2.22
 pydantic==2.11.7
 pydantic_core==2.33.2
 python-dotenv==1.1.1
