--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,6 @@ hpack==4.1.0
 Hypercorn==0.17.3
 hyperframe==6.1.0
 idna==3.10
-jwt==1.4.0
 passlib==1.7.4
 priority==2.0.0
 psycopg2-binary==2.9.10
@@ -31,6 +30,7 @@ python-dotenv==1.1.1
 python-jose==3.5.0
 redis==6.2.0
 rsa==4.9.1
+setuptools==80.9.0
 six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.42
